add booking.yaml to the swagger.json
