# server/routes/authRoutes.js
@@ -5,7 +5,8 @@ const { signupLimiter, signinLimiter } = require('../middlewares/rateLimiter');
 
 // Routes with rate-limiting and corresponding controllers
 router.post('/signup', signupLimiter, authController.signup);
-router.post('/signin', signinLimiter, authController.signin);router.post('/signout',authController.signout );
+router.post('/signin', signinLimiter, authController.signin);
+router.post('/signout',authController.signout );
 
 router.patch('/send-verification-code',authController.sendVerificationCode);
 
